<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="button_text">I\'m a button</string>
    <string name="button_chat">Start Chat</string>
    <string name="button_weather">Check Weather</string>

    <string name="button_send">Send</string>

    <string name="login_text">Login</string>
    <string name="login_hint">Login Name</string>
    <string name="password_text">Password</string>
    <string name="login_button">Login</string>

    <string name="button1_text">Button 1</string>
    <string name="button2_text">Button 2</string>
    <string name="image_button_text">Image Button</string>
    <string name="switch_text">Enable Something</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="finishActivityMessage">Are you sure you want to finish this activity?</string>
    <string name="finishActivityTitle">Finish Activity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_chat_window">ChatWindow</string>
    <string name="title_activity_weather_forecast">WeatherForecast</string>
    <string name="title_message_list">Messages</string>
    <string name="title_message_detail">Message Detail</string>

</resources>
