<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/inputFieldContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.victo.lab1.LoginActivity"
    tools:showIn="@layout/activity_login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"/>

    <EditText
        style="@style/inputField"
        android:hint="@string/login_hint"
        android:inputType="textEmailAddress"
        android:id="@+id/textViewEmail" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_text" />

    <EditText
        style="@style/inputField"
        android:inputType="textPassword" />

    <Button
        style="@style/button"
        android:text="@string/login_button"
        android:id="@+id/buttonLogin"/>



</LinearLayout>
